--- a/acrlibrary/src/main/res/layout/activity_start.xml
+++ b/acrlibrary/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".StartActivity">
+    tools:context=".ACRActivity">
 
     <TextView
         android:layout_width="wrap_content"
